# Dirtybird-C-Miner

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  Dero.bat  PERFORMANCE_TUNING.md  README.md  build.bat  build.sh  config.json  config.json.example  tmp_help_spsa_decode.txt  win_clean.sh
.github/workflows/: benchmarks.yml  ci.yml  release.yml  security.yml
benchmarks/: dero_replay_inputs.txt
cmake/: astrobwtv3.cmake  blake2.cmake  chacha20.cmake  cpu.cmake  embed_hip_sources.cmake  os.cmake  pgo.cmake  setup.cmake  spsa.cmake  winring0.cmake
cmake/hip-crypto/: hip-crypto.cmake
config/: h-manifest.conf  h-run.sh  h-stats.sh
configs/: best_config.json  optimization_matrix.json
docker/: Dockerfile.base  Dockerfile.ubu  Dockerfile.windows
docs/: BUILD.md  CPU_MINING_ARCHITECTURE.md  DEROLUNA_OPTIMIZATION_ANALYSIS.md  GPU_XELIS_INTEGRATION.md  HIPRTC_HEADER_EMBEDDING.md  HIPRTC_ISOLATION_TEST.md  INVESTIGATION_SYNTHESIS.md  MEMORY_ANALYSIS.md  MEMORY_OPTIMIZATION_REPORT.md  RC4_SALSA20_OPTIMIZATION.md
include/: 2dlookup.h  algo_definitions.h  astroworker.h  chacha20.h  compile.h  derobwt.hpp  dirtybird-common.hpp  dirtybird-hugepages.hpp  dluna.h  hip_platform.h  hiprtc_compat.h  hugepages.h  lookup_mode.hpp  lookup_tables.hpp  memory_optimized.hpp  miner_main.h  msr.hpp  numa_memory_manager.hpp  numa_optimizer.hpp  rc4_cryptogams.hpp  rc4_optimized.hpp  salsa20_avx2.hpp  salsa20_simd.h  sha256_override_telemetry.hpp  sha_detect.h  sleeper.h  spsa.hpp  terminal.hpp  thermal_governor.hpp  worker_lean.hpp
include/stratum/: stratum.h
lib/astrospsa/: .gitattributes  README.md
releases/v1.0.10/: README.md  SHA256SUMS.txt
scripts/: ab_custom_sa_bench.ps1  ab_prefetch_bench.ps1  ab_prefetch_bench.sh  analyze_results.py  bench_compare_miners.py  bench_optimize.py  build-pgo.sh  build.ps1  build.sh  build_all.ps1  build_all.sh  build_and_test.bat  build_profile.bat  collect_sa_metrics.ps1  prereqs.sh  release-android.sh  release-hiveos.sh  release.ps1  release.sh  run_optimization.bat  run_optimization.ps1  run_sa_sweep.py  run_tests.bat  run_thread_sweep.py  swap_hiprtc_version.ps1  termux-setup.sh
src/: astrobwt.cpp  branch.cpp  console.cpp  difficulty.cpp  dluna_stages.cpp  main.cpp  miner.cpp  network.cpp  runtime_tune.cpp  sa_2byte_radix.cpp  salsa20.cpp  sha256_ni.cpp  spsa.cpp  spsa_local.cpp  spsa_tritonn.cpp  spsa_tritonn_helpers.cpp  version.h
src/coins/: dero_worker_pool.cpp  dero_worker_pool.hpp  dummy_miners.cpp  mine_dero.cpp  mine_dero_batched.cpp  mine_dero_interleaved.cpp  mine_dero_lockfree.cpp  mine_spectre.cpp  miners.hpp
src/core/: Taskbar.h  algos.h  build_info.cpp  gpulibs.h  mimalloc_override.cpp  miner.cpp  miner.h  reporter.cpp  reporter.hpp
src/crypto/: salsa20_avx2.c  salsa20_simd.c  sha256_override.cpp
src/crypto/aes/: aes_multiway.h
src/crypto/argon2/: argon2_avx2.cpp  argon2_avx512.cpp  argon2_fmv.cpp
src/crypto/astrobwtv3/: astro_aarch64.cpp  astrobwtv3.cpp  astrobwtv3.cpp.bak  astrobwtv3.h  astrotest.cpp  benchmark_results.csv  branch_tables.cpp  branch_tables.hpp  branched_AVX2.h  bucket_optimized.h  bucket_sa.h  build_benchmark.bat  build_benchmark.sh  cache_batching.cpp  cache_batching.hpp  cloned_astrobwt.cpp  custom_sa_70kb.cpp  custom_sa_70kb.h  divsufsort.c  divsufsort_memopt.h  divsufsort_private.h  dluna_radix_sa.h  interleaved_miner.cpp  interleaved_miner.hpp  lean_interleaved_miner.hpp  lookup_full.cpp  lookup_full.hpp  lookupcompute.cpp  miner_lean.cpp  optimization_tests.cpp  optimization_tests.hpp  prefetch_insertions.md  prefetch_strategy.hpp  radix_sa.h  rc4_avx512.cpp  rc4_avx512.hpp  sa_benchmark.cpp  sa_benchmark.hpp  sa_benchmark_CMakeLists.txt  sa_incremental.cpp  (+18 more)
src/crypto/blake2/: blake2.h  blake2b.cpp
src/crypto/chacha/: chacha20_avx2.cpp  chacha20_avx512.cpp
src/dirtybird_cpu/: mine_kas_unified.cpp  mine_xelis_unified.cpp
src/dirtybird_cpu/algos/: astrix_cpu.hpp  hoosat_cpu.hpp  nexellia_cpu.hpp  waglayla_cpu.hpp  xelis_cpu.hpp
src/dirtybird_cpu/common/: cpu_algo.hpp  cpu_algo_registry.hpp  cpu_miner.hpp  mine_cpu_unified.hpp
src/dirtybird_hip/: CMakeLists.txt  hello-world.hip
src/dirtybird_hip/coins/astrix/: mine_astrix.hip  mine_astrix.hip.cpp  mine_astrix.hip.h
src/dirtybird_hip/coins/nexellia/: mine_nexellia.hip  mine_nexellia.hip.cpp  mine_nexellia.hip.h
src/dirtybird_hip/coins/waglayla/: mine_waglayla.hip  mine_waglayla.hip.cpp  mine_waglayla.hip.h
src/dirtybird_hip/coins/xelis/: mine_xelis.hip.cpp  mine_xelis.hip.h
src/dirtybird_hip/common/: cuda_uint128.hip.inc  gpu_algo.hpp  gpu_algo_impl.hpp  gpu_miner.hpp  gpu_rtc.hpp  helpers.hip.hpp  hip_algo_registry.hpp  stdint-jit.hip.inc  uint128-compat.hip.inc
src/dirtybird_hip/core/: gpu_rtc_precompile.cpp  main_hip.cpp  test_hiprtc_isolation.cpp  test_hiprtc_isolation.hpp
src/dirtybird_hip/crypto/: aes-inline.hip.inc  blake3-inline.hip.inc  keccak-amd.hip.inc  keccak-nvidia.hip.inc  skein_port.hip.h
src/dirtybird_hip/crypto/astrix-hash/: astrix-hash.hip  astrix_archdef.h
src/dirtybird_hip/crypto/nxl-hash/: nxl-hash.hip  nxl_archdef.h
src/dirtybird_hip/crypto/wala-hash/: wala-hash.hip  wala_archdef.h
src/dirtybird_hip/crypto/xelis-hash/: xelis-hash-v3.hip
src/dirtybird_hip/util/hamilton/: hamilton.hip
src/hw/api/: HwApi.cpp  HwApi.h  api.cmake
src/hw/dmi/: DmiBoard.cpp  DmiBoard.h  DmiMemory.cpp  DmiMemory.h  DmiReader.cpp  DmiReader.h  DmiReader_unix.cpp  DmiTools.h  dmi.cmake
src/hw/msr/: Msr.h  MsrItem.h
src/net/: DNSResolver.cpp  DNSResolver.hpp  net.cpp  net.hpp  sessions.hpp
src/net/dero/: net_dero.cpp
src/net/spectre/: net_spectre_stratum.cpp
src/util/: numa_optimizer.cpp
tests/: test_custom_sa.cpp
tools/: pgo_trainer.cpp
tools/replay/: CMakeLists.txt  bench_stage5.cpp  replay_globals.cpp  replay_harness.cpp  report.cpp  test_cap_format.cpp  test_runtime_tune.cpp  test_self_diff.cpp  test_stage3_tail.cpp  test_stage5_descriptor.cpp  test_statusline.cpp  test_v114_encode.cpp
